HEAD:
- Raises ArgumentError when assigning, or querying, with a symbol that is
  not part of the enumeration
- A value of nil in underlying attribute results in a nil value for the
  enumeration
- Assigning nil to the enumeration results in a value of nil for the underlying
  attribute

Version 0.5.0:
- Default name of underlying attribute can be overridden with the :attribute
  option
- Internal cleanup: removed some unnecessary code and patching for Rails 3

Version 0.4.0:
- MetaWhere interoperability
- Tested with Rails 3.0.0

Version 0.3.1:
- Re-release of 0.3.0 to pick up missed files

Version 0.3.0:
- Support for Rails 3.0.0.rc2
- NOTE: no longer compatible with Rails 3.0.0.rc

Version 0.2.2:
- Cosmetic change: simply gemfile description

Version 0.2.1:
- Support for JRuby 1.5.1
- Support for ActiveRecord 2.3.8

Version 0.2.0:
- Support for Arel predicates

Version 0.1.0:
- Initial release