@@ -25,7 +25,7 @@ When /^I save and reload the object$/ do
 end
 
 Then /^it should have the assigned value as its value$/ do
-  @object.color.value.should == @assigned
+  @object.color.to_sym.should == @assigned
 end
 
 Then /^the ([a-z_]+\?) predicate should be (true|false)$/ do |predicate, value|
@@ -65,9 +65,9 @@ When /^I query for objects with the value :([a-z_]+) via MetaWhere$/ do |value|
 end
 
 Then /^I should get all of the objects having that value$/ do
-  @results.should == @all_objects.select {|x| x.color.value == @desired_color}
+  @results.should == @all_objects.select {|x| x.color.to_sym == @desired_color}
 end
 
 Then /^I should not get any objects having other values$/ do
-  @results.reject {|x| x.color.value == @desired_color}.should be_empty
+  @results.reject {|x| x.color.to_sym == @desired_color}.should be_empty
 end
